more cleanup and lint warning cleanup